--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </style>
   <!-- Load Google Maps JS API with Places library and callback -->
   <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places&callback=initPlaces">
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDfZl2qxFBhNwmlS2CORhDDm6_4YqI2DPA&libraries=places&callback=initPlaces">
   </script>
 </head>
 <body>
