--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </script>
   <!-- Load Google Maps JS API with Places library and callback -->
   <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=&libraries=places&callback=initPlaces">
+    src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places&callback=initPlaces">
   </script>
 </head>
 <body>
