--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Communeat Bangalore</title>
-  <meta name="description" content="Enter a Bangalore pincode to find 5 random restaurants.">
+  <meta name="description" content="Search and display restaurants in Bangalore using Google Places Text Search API.">
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
   <style>
@@ -18,7 +18,7 @@
     body { margin: 0; font-family: 'Poppins', sans-serif; background: var(--bg-color); color: var(--text-color); }
     header { background: var(--primary-color); color: #fff; text-align: center; padding: 2rem 1rem; }
     header h1 { margin: 0; font-size: 2.5rem; }
-    main { max-width: 800px; margin: 2rem auto; padding: 0 1rem; }
+    main { max-width: 600px; margin: 2rem auto; padding: 0 1rem; }
     .search-section { display: flex; gap: 0.5rem; margin-bottom: 2rem; }
     .search-section input {
       flex: 1;
@@ -37,71 +37,65 @@
       cursor: pointer;
       transition: background 0.2s;
     }
-    .search-section button:hover { background: darken(var(--accent-color), 10%); }
-    #results { display: grid; grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); gap: 1rem; }
-    .restaurant { background: #fff; padding: 1rem; border-radius: 4px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
-    .restaurant h3 { margin: 0 0 0.5rem; color: var(--primary-color); font-size: 1.1rem; }
-    .restaurant p { margin: 0.25rem 0; font-size: 0.9rem; }
-    .error { grid-column: 1 / -1; color: red; text-align: center; }
+    .search-section button:hover { background: #c96b55; }
+    #results { margin-top: 1rem; }
+    .restaurant { background: #fff; padding: 1rem; border-radius: 4px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); margin-bottom: 1rem; }
+    .restaurant h3 { margin: 0 0 0.5rem; color: var(--primary-color); font-size: 1.2rem; }
+    .restaurant p { margin: 0.25rem 0; font-size: 0.95rem; }
+    .error { color: red; font-weight: bold; text-align: center; }
   </style>
+  <!-- Load Maps JS API with Places library and callback -->
+  <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDfZl2qxFBhNwmlS2CORhDDm6_4YqI2DPA&libraries=places&callback=initMap">
+  </script>
+</head>
+<body>
+  <header>
+    <h1>Communeat Bangalore</h1>
+    <p>Enter a search term or leave blank and click Find Restaurants</p>
+  </header>
+  <main>
+    <div class="search-section">
+      <input id="query" type="text" placeholder="e.g., Indiranagar, pizza, cafe...">
+      <button onclick="searchPlaces()">Find Restaurants</button>
+    </div>
+    <div id="results">
+      <!-- Results or errors will appear here -->
+    </div>
+  </main>
   <script>
-    // Handle authentication errors
-    window.gm_authFailure = function() {
-      displayError('Authentication error: check your API key.');
-    };
-    function displayError(msg) {
-      const container = document.getElementById('results');
-      container.innerHTML = `<p class=\"error\">${msg}</p>`;
+    let service;
+    // Called by Google API callback
+    function initMap() {
+      service = new google.maps.places.PlacesService(document.createElement('div'));
     }
-    function init() {
-      window.geocoder = new google.maps.Geocoder();
-      window.service = new google.maps.places.PlacesService(document.createElement('div'));
-    }
-    function searchByPincode() {
-      const pin = document.getElementById('pincode').value.trim();
-      if (!pin) { displayError('Please enter a pincode.'); return; }
-      displayError('Searching for restaurants...');
-      geocoder.geocode({ address: pin + ', Bangalore, India' }, (res, status) => {
-        if (status === 'OK' && res[0]) {
-          const loc = res[0].geometry.location;
-          service.nearbySearch({ location: loc, radius: 100, type: ['restaurant'] }, (places, s) => {
-            if (s === google.maps.places.PlacesServiceStatus.OK) {
-              if (!places.length) return displayError('No restaurants found in this pincode.');
-              const shuffled = places.sort(() => 0.5 - Math.random());
-              displayResults(shuffled.slice(0, 5));
-            } else if (s === google.maps.places.PlacesServiceStatus.REQUEST_DENIED) {
-              displayError('Request denied: check API restrictions.');
-            } else {
-              displayError('Error: ' + s);
-            }
+    function searchPlaces() {
+      const input = document.getElementById('query').value.trim();
+      const base = 'restaurant in Bangalore';
+      const query = input ? base + ' ' + input : base;
+      document.getElementById('results').innerHTML = '<p>Searching...</p>';
+      service.textSearch({ query }, (places, status) => {
+        const container = document.getElementById('results');
+        container.innerHTML = '';
+        if (status === google.maps.places.PlacesServiceStatus.OK && places.length) {
+          // Show up to 5 results
+          places.slice(0,5).forEach(p => {
+            const card = document.createElement('div');
+            card.className = 'restaurant';
+            const h = document.createElement('h3'); h.textContent = p.name; card.appendChild(h);
+            if (p.formatted_address) { const addr = document.createElement('p'); addr.textContent = p.formatted_address; card.appendChild(addr); }
+            if (p.rating) { const r = document.createElement('p'); r.textContent = 'Rating: ' + p.rating + ' ★'; card.appendChild(r); }
+            container.appendChild(card);
           });
+        } else if (status === google.maps.places.PlacesServiceStatus.ZERO_RESULTS) {
+          container.innerHTML = '<p class="error">No restaurants found.</p>';
+        } else if (status === google.maps.places.PlacesServiceStatus.REQUEST_DENIED) {
+          container.innerHTML = '<p class="error">Request denied: check API key or restrictions.</p>';
         } else {
-          displayError('Geocoding failed: ' + status);
+          container.innerHTML = `<p class="error">Error: ${status}</p>`;
         }
       });
     }
-    function displayResults(arr) {
-      const container = document.getElementById('results');
-      container.innerHTML = '';
-      arr.forEach(p => {
-        const card = document.createElement('div'); card.className = 'restaurant';
-        const h = document.createElement('h3'); h.textContent = p.name; card.appendChild(h);
-        if (p.vicinity) { const a = document.createElement('p'); a.textContent = p.vicinity; card.appendChild(a); }
-        if (p.rating) { const r = document.createElement('p'); r.textContent = 'Rating: ' + p.rating + ' ★'; card.appendChild(r); }
-        container.appendChild(card);
-      });
-    }
   </script>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDfZl2qxFBhNwmlS2CORhDDm6_4YqI2DPA&libraries=places&callback=init"></script>
-</head>
-<body>
-  <header><h1>Communeat Bangalore</h1></header>
-  <main>
-    <section class="search-section">
-      <input id="pincode" type="text" placeholder="Enter Bangalore pincode" />
-      <button onclick="searchByPincode()">Find 5 Random Restaurants</button>
-    </section>
-    <section id="results"></section>
-  </main>
 </body>
 </html>
