--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Communeat Bangalore</title>
-  <meta name="description" content="Search and display restaurants in Bangalore using Google Places Text Search API.">
-  <!-- Google Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+  <meta name="description" content="Enter a Bangalore pincode to view restaurants on Google Maps." />
   <style>
     :root {
       --primary-color: #1a3642;
@@ -15,19 +13,13 @@
       --text-color: #333;
     }
     * { box-sizing: border-box; }
-    body { margin: 0; font-family: 'Poppins', sans-serif; background: var(--bg-color); color: var(--text-color); }
+    body { margin: 0; font-family: Arial, sans-serif; background: var(--bg-color); color: var(--text-color); }
     header { background: var(--primary-color); color: #fff; text-align: center; padding: 2rem 1rem; }
     header h1 { margin: 0; font-size: 2.5rem; }
-    main { max-width: 600px; margin: 2rem auto; padding: 0 1rem; }
-    .search-section { display: flex; gap: 0.5rem; margin-bottom: 2rem; }
-    .search-section input {
-      flex: 1;
-      padding: 0.75rem;
-      font-size: 1rem;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-    }
-    .search-section button {
+    main { max-width: 800px; margin: 2rem auto; padding: 0 1rem; }
+    .input-group { display: flex; gap: 0.5rem; margin-bottom: 1rem; }
+    .input-group input { flex: 1; padding: 0.75rem; font-size: 1rem; border: 1px solid #ccc; border-radius: 4px; }
+    .input-group button {
       padding: 0.75rem 1.5rem;
       font-size: 1rem;
       border: none;
@@ -35,66 +27,33 @@
       color: #fff;
       border-radius: 4px;
       cursor: pointer;
-      transition: background 0.2s;
     }
-    .search-section button:hover { background: #c96b55; }
-    #results { margin-top: 1rem; }
-    .restaurant { background: #fff; padding: 1rem; border-radius: 4px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); margin-bottom: 1rem; }
-    .restaurant h3 { margin: 0 0 0.5rem; color: var(--primary-color); font-size: 1.2rem; }
-    .restaurant p { margin: 0.25rem 0; font-size: 0.95rem; }
-    .error { color: red; font-weight: bold; text-align: center; }
+    iframe { width: 100%; height: 500px; border: none; border-radius: 4px; }
   </style>
-  <!-- Load Maps JS API with Places library and callback -->
-  <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDfZl2qxFBhNwmlS2CORhDDm6_4YqI2DPA&libraries=places&callback=initMap">
-  </script>
 </head>
 <body>
   <header>
     <h1>Communeat Bangalore</h1>
-    <p>Enter a search term or leave blank and click Find Restaurants</p>
+    <p>Enter a pincode to see restaurants</p>
   </header>
   <main>
-    <div class="search-section">
-      <input id="query" type="text" placeholder="e.g., Indiranagar, pizza, cafe...">
-      <button onclick="searchPlaces()">Find Restaurants</button>
+    <div class="input-group">
+      <input type="text" id="pincode" placeholder="e.g., 560001" />
+      <button onclick="showMap()">Show Restaurants</button>
     </div>
-    <div id="results">
-      <!-- Results or errors will appear here -->
-    </div>
+    <iframe id="mapFrame" src="" allowfullscreen loading="lazy"></iframe>
   </main>
+
   <script>
-    let service;
-    // Called by Google API callback
-    function initMap() {
-      service = new google.maps.places.PlacesService(document.createElement('div'));
-    }
-    function searchPlaces() {
-      const input = document.getElementById('query').value.trim();
-      const base = 'restaurant in Bangalore';
-      const query = input ? base + ' ' + input : base;
-      document.getElementById('results').innerHTML = '<p>Searching...</p>';
-      service.textSearch({ query }, (places, status) => {
-        const container = document.getElementById('results');
-        container.innerHTML = '';
-        if (status === google.maps.places.PlacesServiceStatus.OK && places.length) {
-          // Show up to 5 results
-          places.slice(0,5).forEach(p => {
-            const card = document.createElement('div');
-            card.className = 'restaurant';
-            const h = document.createElement('h3'); h.textContent = p.name; card.appendChild(h);
-            if (p.formatted_address) { const addr = document.createElement('p'); addr.textContent = p.formatted_address; card.appendChild(addr); }
-            if (p.rating) { const r = document.createElement('p'); r.textContent = 'Rating: ' + p.rating + ' ★'; card.appendChild(r); }
-            container.appendChild(card);
-          });
-        } else if (status === google.maps.places.PlacesServiceStatus.ZERO_RESULTS) {
-          container.innerHTML = '<p class="error">No restaurants found.</p>';
-        } else if (status === google.maps.places.PlacesServiceStatus.REQUEST_DENIED) {
-          container.innerHTML = '<p class="error">Request denied: check API key or restrictions.</p>';
-        } else {
-          container.innerHTML = `<p class="error">Error: ${status}</p>`;
-        }
-      });
+    function showMap() {
+      const pin = document.getElementById('pincode').value.trim();
+      if (!pin) {
+        alert('Please enter a pincode.');
+        return;
+      }
+      const query = encodeURIComponent('restaurants in Bangalore ' + pin);
+      const url = 'https://www.google.com/maps?q=' + query + '&output=embed';
+      document.getElementById('mapFrame').src = url;
     }
   </script>
 </body>
