--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Communeat Bangalore</title>
-  <meta name="description" content="Enter a Bangalore pincode or locality to find 5 random restaurants.">
+  <meta name="description" content="Enter a Bangalore pincode or locality to find 5 random restaurants with autocomplete suggestions.">
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
   <style>
@@ -45,7 +45,7 @@
     .error { grid-column: 1 / -1; color: red; text-align: center; }
   </style>
   <script>
-    // Handle authentication errors
+    // Authentication failure handler
     window.gm_authFailure = function() {
       displayError('Authentication error: check your API key.');
     };
@@ -53,30 +53,54 @@
       const container = document.getElementById('results');
       container.innerHTML = `<p class="error">${msg}</p>`;
     }
+    let selectedLocation = null;
     function init() {
+      // Initialize Geocoder and PlacesService
       window.geocoder = new google.maps.Geocoder();
       window.service = new google.maps.places.PlacesService(document.createElement('div'));
+      // Set up Autocomplete for input suggestions
+      const inputElem = document.getElementById('location');
+      const autocomplete = new google.maps.places.Autocomplete(inputElem, {
+        types: ['(regions)'],
+        componentRestrictions: { country: 'in' }
+      });
+      autocomplete.setFields(['geometry', 'name']);
+      autocomplete.addListener('place_changed', () => {
+        const place = autocomplete.getPlace();
+        if (place.geometry) {
+          selectedLocation = place.geometry.location;
+        }
+      });
     }
     function searchByLocation() {
       const input = document.getElementById('location').value.trim();
       if (!input) { displayError('Please enter a pincode or locality.'); return; }
       displayError('Searching for restaurants...');
-      geocoder.geocode({ address: input + ', Bangalore, India' }, (res, status) => {
-        if (status === 'OK' && res[0]) {
-          const loc = res[0].geometry.location;
-          service.nearbySearch({ location: loc, radius: 100, type: ['restaurant'] }, (places, s) => {
-            if (s === google.maps.places.PlacesServiceStatus.OK) {
-              if (!places.length) return displayError('No restaurants found for this location.');
-              const shuffled = places.sort(() => 0.5 - Math.random());
-              displayResults(shuffled.slice(0, 5));
-            } else if (s === google.maps.places.PlacesServiceStatus.REQUEST_DENIED) {
-              displayError('Request denied: check API restrictions.');
-            } else {
-              displayError('Error: ' + s);
-            }
-          });
+      // If user selected from autocomplete, use that location directly
+      if (selectedLocation) {
+        runNearbySearch(selectedLocation);
+      } else {
+        // Otherwise geocode the input
+        geocoder.geocode({ address: input + ', Bangalore, India' }, (res, status) => {
+          if (status === 'OK' && res[0]) {
+            runNearbySearch(res[0].geometry.location);
+          } else {
+            displayError('Geocoding failed: ' + status);
+          }
+        });
+      }
+    }
+    function runNearbySearch(location) {
+      window.service.nearbySearch({ location, radius: 100, type: ['restaurant'] }, (places, status) => {
+        if (status === google.maps.places.PlacesServiceStatus.OK && places.length) {
+          const shuffled = places.sort(() => 0.5 - Math.random());
+          displayResults(shuffled.slice(0, 5));
+        } else if (status === google.maps.places.PlacesServiceStatus.REQUEST_DENIED) {
+          displayError('Request denied: check API restrictions.');
+        } else if (status === google.maps.places.PlacesServiceStatus.ZERO_RESULTS) {
+          displayError('No restaurants found for this location.');
         } else {
-          displayError('Geocoding failed: ' + status);
+          displayError('Error: ' + status);
         }
       });
     }
