--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       });
     }
   </script>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places&callback=init"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDfZl2qxFBhNwmlS2CORhDDm6_4YqI2DPA&libraries=places&callback=init"></script>
 </head>
 <body>
   <header><h1>Communeat Bangalore</h1></header>
