--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Communeat Bangalore</title>
-  <meta name="description" content="Enter a Bangalore pincode or locality to find 5 random restaurants with autocomplete suggestions.">
+  <meta name="description" content="Enter a Bangalore pincode or locality to find 5 random restaurants with autocomplete suggestions under Collection or Community.">
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
   <style>
@@ -19,6 +19,17 @@
     header { background: var(--primary-color); color: #fff; text-align: center; padding: 2rem 1rem; }
     header h1 { margin: 0; font-size: 2.5rem; }
     main { max-width: 800px; margin: 2rem auto; padding: 0 1rem; }
+    .categories { display: flex; justify-content: center; gap: 2rem; margin-bottom: 2rem; }
+    .categories h2 {
+      margin: 0;
+      padding: 0.5rem 1rem;
+      cursor: pointer;
+      border-bottom: 2px solid transparent;
+      transition: border-color 0.3s;
+      font-weight: 500;
+      color: var(--primary-color);
+    }
+    .categories h2:hover { border-color: var(--accent-color); }
     .search-section { display: flex; gap: 0.5rem; margin-bottom: 2rem; }
     .search-section input {
       flex: 1;
@@ -77,15 +88,11 @@
         displayError('Please enter a Bangalore pincode or locality.');
         return;
       }
-      // Determine if input is pincode or autocomplete locality
       if (pinRegex.test(input)) {
-        // Validate pincode via geocoding
         geocodeAndSearch(input + ', Bangalore, India');
       } else if (selectedLocation) {
-        // Autocomplete selection
         runNearbySearch(selectedLocation);
       } else {
-        // Free-text locality
         geocodeAndSearch(input + ', Bangalore, India');
       }
     }
@@ -141,11 +148,15 @@
       });
     }
   </script>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDfZl2qxFBhNwmlS2CORhDDm6_4YqI2DPA&libraries=places&callback=init"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places&callback=init"></script>
 </head>
 <body>
   <header><h1>Communeat Bangalore</h1></header>
   <main>
+    <div class="categories">
+      <h2>Collection</h2>
+      <h2>Community</h2>
+    </div>
     <section class="search-section">
       <input id="location" type="text" placeholder="Enter Bangalore pincode or locality" />
       <button onclick="searchByLocation()">Find 5 Random Restaurants</button>
