--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Communeat Bangalore</title>
+  <title>Commun-Eat-Y</title>
   <meta name="description" content="Explore restaurants in Bangalore under Collection and Community categories.">
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
@@ -241,7 +241,7 @@
 </head>
 <body>
   <header>
-    <h1>Communeat Bangalore</h1>
+    <h1>Commun-Eat-Y</h1>
     <p class="tagline">Discover flavor. Share belonging.</p>
   </header>
   <!-- Facts scattered -->
