--- a/index.html
+++ b/index.html
@@ -3,17 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Commun-Eat-Y</title>
+  <title>Communeat Bangalore</title>
   <meta name="description" content="Explore restaurants in Bangalore under Collection and Community categories.">
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
   <style>
     :root {
-      /* Neapolitan Pizza palette */
-      --primary-color: #D72638;    /* sauce red */
-      --accent-color: #FFFFFF;    /* cheese white */
-      --neutral-color: #2E2E2E;    /* crust black */
-      --bg-color: #FFF7F0;         /* warm off-white */
+      --primary-color: #D72638;
+      --accent-color: #FFFFFF;
+      --neutral-color: #2E2E2E;
+      --bg-color: #FFF7F0;
       --text-color: var(--neutral-color);
     }
     *, *::before, *::after { box-sizing: border-box; }
@@ -31,7 +30,7 @@
       color: var(--accent-color);
       text-align: center;
       padding: 10rem 1rem 4rem;
-      min-height: 600px;
+      min-height: 500px;
     }
     header::after {
       content: '';
@@ -46,209 +45,126 @@
       z-index: 1;
       margin: 0;
     }
-    header h1 {
-      font-size: 4rem;
-      font-weight: 700;
-      letter-spacing: 1px;
-    }
-    .tagline {
-      margin-top: 1rem;
-      font-size: 1.5rem;
-      font-weight: 300;
-    }
-    main {
-      max-width: 880px;
-      margin: 3rem auto;
-      padding: 0 1rem;
-      position: relative;
-    }
-    .categories {
-      display: flex;
-      justify-content: center;
-      gap: 2rem;
-      margin-bottom: 2rem;
-    }
+    header h1 { font-size: 3.5rem; font-weight: 700; }
+    .tagline { margin-top: 1rem; font-size: 1.5rem; font-weight: 300; }
+    main { max-width: 880px; margin: 3rem auto; padding: 0 1rem; position: relative; }
+    .categories { display: flex; justify-content: center; gap: 2rem; margin-bottom: 2rem; }
     .categories h2 {
-      margin: 0;
-      padding-bottom: 0.25rem;
-      cursor: pointer;
-      border-bottom: 2px solid transparent;
-      transition: border-color 0.3s, color 0.3s;
-      font-weight: 500;
-      color: var(--neutral-color);
+      margin: 0; padding-bottom: 0.25rem; cursor: pointer;
+      border-bottom: 2px solid transparent; transition: border-color 0.3s, color 0.3s;
+      font-weight: 500; color: var(--neutral-color);
     }
-    .categories h2:hover {
-      border-color: var(--primary-color);
-      color: var(--primary-color);
-    }
-    .search-section {
-      display: flex;
-      gap: 0.5rem;
-      margin-bottom: 3rem;
-    }
+    .categories h2:hover { border-color: var(--primary-color); color: var(--primary-color); }
+    .search-section { display: flex; gap: 0.5rem; margin-bottom: 3rem; }
     .search-section input {
-      flex: 1;
-      padding: 1rem;
-      font-size: 1rem;
-      border: 2px solid var(--neutral-color);
-      border-radius: 4px;
+      flex: 1; padding: 1rem; font-size: 1rem;
+      border: 2px solid var(--neutral-color); border-radius: 4px;
       transition: border-color 0.3s;
     }
-    .search-section input:focus {
-      outline: none;
-      border-color: var(--primary-color);
-    }
+    .search-section input:focus { outline: none; border-color: var(--primary-color); }
     .search-section button {
-      padding: 1rem 2rem;
-      font-size: 1rem;
-      border: none;
-      background: var(--primary-color);
-      color: var(--accent-color);
-      border-radius: 4px;
-      cursor: pointer;
+      padding: 1rem 2rem; font-size: 1rem; border: none;
+      background: var(--primary-color); color: var(--accent-color);
+      border-radius: 4px; cursor: pointer;
       transition: background 0.2s, transform 0.2s;
     }
-    .search-section button:hover {
-      background: #b41c2d;
-      transform: translateY(-2px);
-    }
-    #results {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-      gap: 1rem;
-      margin-bottom: 4rem;
-    }
+    .search-section button:hover { background: #b41c2d; transform: translateY(-2px); }
+    #results { display: grid; grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); gap: 1rem; margin-bottom: 4rem; }
     .restaurant {
-      background: var(--accent-color);
-      padding: 1.25rem;
-      border-radius: 8px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-      color: var(--neutral-color);
+      background: var(--accent-color); padding: 1.25rem; border-radius: 8px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1); color: var(--neutral-color);
       transition: transform 0.2s;
     }
-    .restaurant:hover {
-      transform: translateY(-4px);
+    .restaurant:hover { transform: translateY(-4px); }
+    .restaurant h3 { margin: 0 0 0.5rem; font-size: 1.2rem; }
+    .restaurant p { margin: 0.25rem 0; font-size: 0.95rem; }
+    .error { grid-column: 1 / -1; color: red; text-align: center; }
+    /* Fact styling */
+    .fact {
+      position: absolute; background: rgba(255,255,255,0.95);
+      color: var(--neutral-color); padding: 1rem;
+      border-left: 6px solid var(--primary-color);
+      border-radius: 8px; box-shadow: 0 6px 20px rgba(0,0,0,0.15);
+      max-width: 220px; font-size: 0.9rem; opacity: 0;
+      animation: fadeInUp 0.8s ease-out forwards;
     }
-    .restaurant h3 {
-      margin: 0 0 0.5rem;
-      font-size: 1.2rem;
-    }
-    .restaurant p {
-      margin: 0.25rem 0;
-      font-size: 0.95rem;
-    }
-    .error {
-      grid-column: 1 / -1;
-      color: red;
-      text-align: center;
-    }
-    /* Entrance animation */
     @keyframes fadeInUp {
       0% { opacity: 0; transform: translateY(20px); }
       100% { opacity: 1; transform: translateY(0); }
     }
-    .fact {
-      position: absolute;
-      background: rgba(255,255,255,0.95);
-      color: var(--neutral-color);
-      padding: 1rem;
-      border-left: 6px solid var(--primary-color);
-      border-radius: 8px;
-      box-shadow: 0 6px 20px rgba(0,0,0,0.15);
-      max-width: 220px;
-      font-size: 0.9rem;
-      opacity: 0;
-      animation: fadeInUp 0.8s ease-out forwards;
-    }
-    /* Fact timing */
-    #fact1 { top: 20%; left: 5%; animation-delay: 0.5s; transform: rotate(-3deg); }
-    #fact2 { top: 25%; right: 5%; animation-delay: 1s; transform: rotate(2deg); }
-    #fact3 { top: 65%; left: 8%; animation-delay: 1.5s; transform: rotate(2deg); }
-    #fact4 { top: 72%; right: 8%; animation-delay: 2s; transform: rotate(-2deg); }
+    /* Fact positions */
+    #fact1 { top: 150px; left: 40px; animation-delay: 0.5s; }
+    #fact2 { top: 200px; right: 60px; animation-delay: 1s; }
+    #fact3 { top: 650px; left: 60px; animation-delay: 1.5s; }
+    #fact4 { top: 700px; right: 80px; animation-delay: 2s; }
     /* Arrows */
     .fact::before {
       content: '';
-      position: absolute;
-      width: 2px;
-      background: var(--primary-color);
+      position: absolute; width: 2px; background: var(--primary-color);
     }
-    /* Fact1 & Fact2 arrows pointing down */
     #fact1::before, #fact2::before {
-      height: 30px;
-      bottom: -30px;
-      left: 50%;
-      transform: translateX(-50%);
+      height: 30px; bottom: -30px; left: 50%; transform: translateX(-50%);
     }
     #fact1::after, #fact2::after {
-      content: '';
-      position: absolute;
-      border: 6px solid transparent;
-      border-top-color: var(--primary-color);
-      bottom: -12px;
-      left: 50%;
-      transform: translateX(-50%);
+      content: ''; position: absolute;
+      border: 6px solid transparent; border-top-color: var(--primary-color);
+      bottom: -12px; left: 50%; transform: translateX(-50%);
     }
-    /* Fact3 & Fact4 arrows pointing up */
     #fact3::before, #fact4::before {
-      height: 30px;
-      top: -30px;
-      left: 50%;
-      transform: translateX(-50%);
+      height: 30px; top: -30px; left: 50%; transform: translateX(-50%);
     }
     #fact3::after, #fact4::after {
-      content: '';
-      position: absolute;
-      border: 6px solid transparent;
-      border-bottom-color: var(--primary-color);
-      top: -12px;
-      left: 50%;
-      transform: translateX(-50%);
+      content: ''; position: absolute;
+      border: 6px solid transparent; border-bottom-color: var(--primary-color);
+      top: -12px; left: 50%; transform: translateX(-50%);
     }
-    @media (max-width: 768px) {
-      header { padding: 6rem 1rem 2rem; }
-      header h1 { font-size: 2.5rem; }
-      .fact { display: none; }
-    }
+    @media (max-width: 768px) { .fact { display: none; } }
   </style>
   <script>
-    window.gm_authFailure = function() { displayError('Authentication error: check your API key.'); };
+    window.gm_authFailure = () => displayError('Authentication error: check API key.');
     function displayError(msg) { document.getElementById('results').innerHTML = `<p class=\"error\">${msg}</p>`; }
-    let selectedLocation = null;
-    function init() {
-      window.geocoder = new google.maps.Geocoder();
-      window.service = new google.maps.places.PlacesService(document.createElement('div'));
-      const inputElem = document.getElementById('location');
-      const autocomplete = new google.maps.places.Autocomplete(inputElem, { types: ['(regions)'], componentRestrictions: { country: 'in' } });
-      autocomplete.setFields(['geometry', 'name']);
-      autocomplete.addListener('place_changed', () => { const place = autocomplete.getPlace(); if (place.geometry) selectedLocation = place.geometry.location; });
-    }
+    let service;
+    function init() { service = new google.maps.places.PlacesService(document.createElement('div')); }
     function searchByLocation() {
       const input = document.getElementById('location').value.trim();
-      const pinRegex = /^\d{6}$/;
       if (!input) return displayError('Please enter a Bangalore pincode or locality.');
-      if (pinRegex.test(input)) geocodeAndSearch(input + ', Bangalore, India');
-      else if (selectedLocation) runNearbySearch(selectedLocation);
-      else geocodeAndSearch(input + ', Bangalore, India');
-    }
-    function geocodeAndSearch(query) {
       displayError('Searching...');
-      geocoder.geocode({ address: query }, (results, status) => { if (status==='OK'&&results[0]) { const f=results[0].formatted_address; if(!/Bengaluru|Bangalore/i.test(f)) return displayError('Location not in Bangalore.'); runNearbySearch(results[0].geometry.location); } else displayError('Geocode failed: '+status);} );
+      const query = 'restaurants in Bangalore ' + input;
+      service.textSearch({ query }, (results, status) => {
+        if (status === google.maps.places.PlacesServiceStatus.OK && results.length) {
+          displayResults(results.slice(0,5));
+        } else if (status === google.maps.places.PlacesServiceStatus.ZERO_RESULTS) {
+          displayError('No restaurants found.');
+        } else {
+          displayError('Error: ' + status);
+        }
+      });
     }
-    function runNearbySearch(loc) { service.nearbySearch({ location:loc, radius:100, type:['restaurant'] }, (places,status)=>{ if(status===google.maps.places.PlacesServiceStatus.OK&&places.length) displayResults(places.sort(()=>0.5-Math.random()).slice(0,5)); else if(status===google.maps.places.PlacesServiceStatus.REQUEST_DENIED) displayError('Request denied.'); else if(status===google.maps.places.PlacesServiceStatus.ZERO_RESULTS) displayError('No results.'); else displayError('Error: '+status);} ); }
-    function displayResults(arr) { const c=document.getElementById('results'); c.innerHTML=''; arr.forEach(p=>{ const d=document.createElement('div'); d.className='restaurant'; const h=document.createElement('h3'); h.textContent=p.name; d.appendChild(h); if(p.vicinity) d.appendChild(Object.assign(document.createElement('p'),{textContent:p.vicinity})); if(p.rating) d.appendChild(Object.assign(document.createElement('p'),{textContent:'Rating: '+p.rating+' ★'})); c.appendChild(d);} ); }
+    function displayResults(arr) {
+      const container = document.getElementById('results');
+      container.innerHTML = '';
+      arr.forEach(p => {
+        const card = document.createElement('div'); card.className = 'restaurant';
+        const h = document.createElement('h3'); h.textContent = p.name; card.appendChild(h);
+        if (p.formatted_address) card.appendChild(Object.assign(document.createElement('p'),{textContent:p.formatted_address}));
+        else if (p.vicinity) card.appendChild(Object.assign(document.createElement('p'),{textContent:p.vicinity}));
+        if (p.rating) card.appendChild(Object.assign(document.createElement('p'),{textContent:'Rating: '+p.rating+' ★'}));
+        container.appendChild(card);
+      });
+    }
   </script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDfZl2qxFBhNwmlS2CORhDDm6_4YqI2DPA&libraries=places&callback=init"></script>
 </head>
 <body>
   <header>
-    <h1>Commun-Eat-Y</h1>
+    <h1>Communeat Bangalore</h1>
     <p class="tagline">Discover flavor. Share belonging.</p>
   </header>
   <!-- Facts scattered -->
-  <div id="fact1" class="fact">Neapolitan pizza originated in Naples, Italy, in the late 18th century.</div>
-  <div id="fact2" class="fact">L'Antica Pizzeria da Michele and Pizzeria Brandi in Naples still uphold the original style.</div>
-  <div id="fact3" class="fact">San Marzano tomatoes used are grown in volcanic soil near Mount Vesuvius.</div>
-  <div id="fact4" class="fact">The dough is hand-stretched without a rolling pin for its signature airy crust.</div>
+  <div id="fact1" class="fact">Originated in Naples, Italy, in the late 18th century.</div>
+  <div id="fact2" class="fact">L'Antica Pizzeria da Michele and Pizzeria Brandi still serve the original style.</div>
+  <div id="fact3" class="fact">Uses San Marzano tomatoes grown in volcanic soil near Mount Vesuvius.</div>
+  <div id="fact4" class="fact">Dough is hand-stretched without a rolling pin for its airy crust.</div>
   <main>
     <div class="categories">
       <h2>Collection</h2>
